Implemented update resource
